istio_scenarios/istio_with_kong/amazin-dev-inventory-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: inventory-dev
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory-dev
spec:
  hosts:
  - "*"
  gateways:
  - inventory-dev
  http:
  - match:
    - uri:
        prefix: /products
    route:
    - destination:
        host: inventory
        port:
          number: 8080
